# esp32-freertos

./: CMakeLists.txt  README.md  sdkconfig  sdkconfig.defaults.esp32s3
main/: CMakeLists.txt
main/include/: constants.h
main/src/: blink_example_main.c  websocket.c  wifi.c
